--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,6 @@
 name: build workf_flow
-on: 
-  workflow_call:
-   inputs: 
-    version:
-     required: true
-     type: string
-     
+on: workflow_call
+
 jobs:
   build:
     name: Build Laravel App
@@ -17,7 +12,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{inputs.version}}
+          php-version: "8.3"
 
       - name: Install dependencies
         run: |
