--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,11 @@
 name: build workf_flow
-on: workflow_call
+on: 
+ workflow_call:
+  inputs:
+   version:
+    required: true
+    type: string 
+
 
 jobs:
   build:
@@ -12,7 +18,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.3"
+          php-version: ${{inputs.version}}
 
       - name: Install dependencies
         run: |
