--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+            # Disabling shallow clone is recommended for improving relevancy of reporting
+         fetch-depth: 0
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -38,3 +41,7 @@ jobs:
       - name: Generate the key
         run: |
           php artisan key:generate
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@3.2.0 # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
