--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,5 @@ sonar.projectKey=verdan-spheres_ParameterizedD16
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources= resources/
+sonar.sources=app
 # Path to tests directories (relative to the project root)
-sonar.tests= tests/
