--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,10 +14,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-            # Disabling shallow clone is recommended for improving relevancy of reporting
-         fetch-depth: 0
-
+        
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -41,7 +38,11 @@ jobs:
       - name: Generate the key
         run: |
           php artisan key:generate
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2.1.0 
-        env:
+      - name: Run SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@v2.1.0
+        with:
+          env:
+          COMPOSER_PROCESS_TIMEOUT: 0
+          COMPOSER_NO_INTERACTION: 1
+          COMPOSER_NO_AUDIT: 1
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
