--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,14 +39,19 @@ jobs:
         run: |
           php artisan key:generate
 
-
-      - uses: actions/checkout@v4
+      - name: Check out before sacnner
+        uses: actions/checkout@v4
         with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-         fetch-depth: 0
+            # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@v2.1.0
         env:
-           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+       
+
+
+     
         
