--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,8 @@ jobs:
    uses: ./.github/workflows/build.yaml
    with:
      version: "8.3"
-     secrets: inherit
+   secrets: 
+    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        
 
   test:
