--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
     type: string 
   secrets:
     SONAR_TOKEN:
-      
+      required: true
 
 
 jobs:
@@ -60,7 +60,7 @@ jobs:
             scan-type: 'fs'
             scan-ref: '.'
             trivy-config: trivy.yaml
-      
+       
        
 
 
