--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,11 +6,15 @@ on:
    version:
     required: true
     type: string 
-  secrets:
+  secrets:       #same level with input value for passig the sec
     SONAR_TOKEN:
       required: true
-
-
+    DOCKERHUB_USERNAME:
+      required: true
+    DOCKERHUB_TOKEN:
+      required: true
+    
+    
 jobs:
   build:
     name: Build Laravel App
@@ -60,6 +64,22 @@ jobs:
             scan-type: 'fs'
             scan-ref: '.'
             trivy-config: trivy.yaml
+
+      - name: dockernize the application
+        run: |
+          docker build -t reusable .
+     
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+     
+      - name: Tag image
+        run: docker tag reusable ${{ secrets.DOCKERHUB_USERNAME }}/reusable
+     
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/reusable
        
        
 
