--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,8 @@ jobs:
      version: "8.3"
    secrets: 
     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       
+    DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
+    DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
 
   test:
     needs: [build-version-83]
