--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,20 +65,22 @@ jobs:
             scan-ref: '.'
             trivy-config: trivy.yaml
 
-      - name: dockernize the application
+      - name: Build an image from Dockerfile
         run: |
-          docker build -t reusable .
-
-      - name: Generate tarball from image
-        run: |
-            docker pull reusable
-            docker save -o vuln-image.tar <your-docker-image>
+          docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
     
-      - name: Run Trivy vulnerability scanner in tarball mode
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-            input: /github/workspace/vuln-image.tar
-            severity: 'CRITICAL,HIGH'
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+    
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+         sarif_file: 'trivy-results.sarif'
      
       - name: Login to DockerHub
         uses: docker/login-action@v1
