--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,18 +86,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
   
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-image:latest .
-  
-      - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@master
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build
+        uses: docker/build-push-action@v4
         with:
-          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/my-image:latest
-  
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-image:latest
+          context: .
+          outputs: type=docker,dest=/tmp/image.tar
+          tags: user/app:latest
+
+      - name: Scan for vulnerabilities
+        uses: crazy-max/ghaction-container-scan@v3
+        with:
+          tarball: /tmp/image.tar
        
        
 
